cai fang zhong biao shi jin guan yi xie ling yu chu xian pi ruan ta reng yu ji di si cai ji gong si

--- a/date/2025-04/page-4.htm
+++ b/date/2025-04/page-4.htm
@@ -297,16 +297,6 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-101902.htm">被猫抓伤多久过危险期啊（被猫抓伤后多长时间过安全期）</a></h4>
-                <p>摘要：       今天给各位分享被猫抓伤多久过危险期啊的知识，其中也会对被猫抓伤后多长时间过安全期进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、被猫抓伤后.</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
                 <h4><a href="/news/article-107644.htm">狗狗舔人会传染寄生虫吗（小狗驱虫几天排干净虫）</a></h4>
                 <p>摘要：       本篇文章给大家谈谈狗狗舔人会传染寄生虫吗，以及小狗驱虫几天排干净虫对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、宠物狗用舌头舔人的身上,人的身上会不会..</p>
             </div>
@@ -317,8 +307,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-96821.htm">C++ 类成员指针</a></h4>
-                <p>C++的类成员指针是一种奇葩的指针。 假设现在我们要表示一个三维的点，现在有两种定义方式： struct point1{ 	int x, y, z; };  struct point2{ 	int c</p>
+                <h4><a href="/news/article-106800.htm">如何在 C# 循环中捕获局部变量？</a></h4>
+                <p>问题： 我遇到了一个有趣的问题，它的代码大概是这样的。 List&lt;Func&lt;int&gt;&gt;&nbsp;actions&nbsp;=&nbsp;new&nbsp;List&lt;Fu</p>
             </div>
         </div>
     </div>
@@ -327,8 +317,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-101153.htm">哥本哈根减肥餐（哥本哈根减肥餐单）</a></h4>
-                <p>本文目录       哥本哈根食谱原版？  第一天   早餐：全麦面包1片、生姜红茶1杯、苹果1个     午餐：玉米200g、水煮蔬菜1份  晚餐：鸡肉200g、脱脂牛奶150g、水果1份    第</p>
+                <h4><a href="/news/article-93047.htm">Spring的两种依赖注入方式:setter方法注入与构造方法注入</a></h4>
+                <p>&nbsp; &nbsp;Spring的两种依赖注入方式：setter注入与构造方法注入，这两种方法的不同主要就是在xml文件下对应使用property和constructor-arg属性， 例如： </p>
             </div>
         </div>
     </div>
@@ -337,8 +327,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-97508.htm">宠物领养软件下载免费 宠物领养软件下载免费大全</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠物领养软件下载免费的问题，于是小编就整理了3个相关介绍宠物领养软件下载免费的解答，让我们一起看看吧。有没有专门养宠物的App手</p>
+                <h4><a href="/news/article-88624.htm">东北农大动物医院价目表查询（东北农大动物医院价目表查询最新）</a></h4>
+                <p>摘要：       今天给各位分享东北农大动物医院价目表查询的知识，其中也会对东北农大动物医院价目表查询最新进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、农.</p>
             </div>
         </div>
     </div>
@@ -347,8 +337,38 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-17-node-share-links.htm">4月17日更新22.8M/S，2025年最新高速Clash/V2ray/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、韩国、美国、新加坡、日本、加拿大、欧洲等地区,最高速度可达22.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-93048.htm">宠物品牌起名字大全（宠物品牌介绍）</a></h4>
+                <p>摘要：       今天给各位分享宠物品牌起名字大全的知识，其中也会对宠物品牌介绍进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、宠物店取什么名字好...   </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-107645.htm">小型犬狗粮排名前十品牌图（小型犬狗粮哪个牌子最好）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈小型犬狗粮排名前十品牌图，以及小型犬狗粮哪个牌子最好对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、狗粮排名前十品牌2、...      </p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/news/article-96820.htm">Java中Scanner的方法</a></h4>
+                <p>JavaScanner的next与nextLine方法  1. 前言 在Scanner类中 有许多的方法 常用的有 nextInt()、nextFloat()、nextDouble()、next()、</p>
+            </div>
+        </div>
+    </div>
+</div>
+<div class="row w3l-achievements">
+    <div class="col-lg-12 item">
+        <div class="card">
+            <div class="box-wrap">
+                <h4><a href="/free-nodes/2025-4-13-free-node-subscribe.htm">4月13日更新19.7M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了日本、欧洲、香港、加拿大、韩国、美国、新加坡等地区,最高速度可达19.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -367,28 +387,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-110169.htm">猫咪打猫瘟疫苗多少钱一针啊（猫瘟 疫苗）</a></h4>
-                <p>摘要：       今天给各位分享猫咪打猫瘟疫苗多少钱一针啊的知识，其中也会对猫瘟 疫苗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、猫三联多少钱一针啊?..</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-4-free-high-speed-nodes.htm">4月4日更新20.5M/S，2025年最新高速Shadowrocket/Clash/V2ray/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了日本、美国、欧洲、香港、韩国、新加坡、加拿大等地区,最高速度可达20.5 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
-            </div>
-        </div>
-    </div>
-</div>
-<div class="row w3l-achievements">
-    <div class="col-lg-12 item">
-        <div class="card">
-            <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-24-free-high-speed-nodes.htm">4月24日更新21.6M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、香港、欧洲、美国、日本、加拿大、新加坡等地区,最高速度可达21.6 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-105977.htm">weak_ptr介绍</a></h4>
+                <p>本文转载于http://c.biancheng.net/view/7918.html   在C++98/03的基础上，C++11新标准引入了shared_ptr、unique_ptr以及weak_pt</p>
             </div>
         </div>
     </div>
@@ -399,7 +399,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
                                 <h4><span class="badge" style="float: right;">82</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                             </div>
         </div>
