--- a/date/2025-04/page-8.htm
+++ b/date/2025-04/page-8.htm
@@ -297,8 +297,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-108479.htm">动物接种的途径有哪些分别适用于何种病毒（动物接种的优点和缺点）</a></h4>
-                <p>摘要：       今天给各位分享动物接种的途径有哪些分别适用于何种病毒的知识，其中也会对动物接种的优点和缺点进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、.</p>
+                <h4><a href="/news/article-94561.htm">动态指针时钟：利用pyqt5制作指针钟表显示实时时间</a></h4>
+                <p>【阅读全文】 文末附完整源代码实现过程... 想实现这样一个功能，然后pyqt5中又没有现成的组件可以使用，于是就想着只能通过绘图的方式来实现。说到绘图的话，turtle框架无疑是最常见的选择，但其实</p>
             </div>
         </div>
     </div>
@@ -307,8 +307,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-102704.htm">宠物猫疫苗要多少钱一次（宠物猫疫苗多少钱打一次）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈宠物猫疫苗要多少钱一次，以及宠物猫疫苗多少钱打一次对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫咪打疫苗多少钱?2、...      </p>
+                <h4><a href="/news/article-88623.htm">windows下安装redis_在线工具</a></h4>
+                <p>一、安装redis 下载地址： https://github.com/MicrosoftArchive/redis/releases Redis 支持 32 位和 64 位。这个需要根据你系统平台的实</p>
             </div>
         </div>
     </div>
@@ -317,8 +317,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-5-1-free-clash.htm">5月1日更新18.2M/S，2025年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、加拿大、欧洲、香港、日本、新加坡等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-4-28-node-share-links.htm">4月28日更新20.2M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、欧洲、美国、韩国、日本、加拿大等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -327,8 +327,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-93047.htm">Spring的两种依赖注入方式:setter方法注入与构造方法注入</a></h4>
-                <p>&nbsp; &nbsp;Spring的两种依赖注入方式：setter注入与构造方法注入，这两种方法的不同主要就是在xml文件下对应使用property和constructor-arg属性， 例如： </p>
+                <h4><a href="/news/article-104179.htm">动物疫苗批号查询网站官网入口下载（动物疫苗2021）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈动物疫苗批号查询网站官网入口下载，以及动物疫苗2021对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、宠必威狂犬疫苗批号查询网站...  </p>
             </div>
         </div>
     </div>
@@ -337,8 +337,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-26-clash-node-daily-updates.htm">4月26日更新21.8M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、加拿大、美国、新加坡、香港、欧洲、日本等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-4-11-clash-node-daily-updates.htm">4月11日更新21.7M/S，2025年最新高速SSR/V2ray/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、日本、韩国、欧洲、美国、新加坡、加拿大等地区,最高速度可达21.7 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -347,8 +347,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-110168.htm">动物疫苗生产厂家排名前十名有哪些品种（动物疫苗有哪些大厂家）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈动物疫苗生产厂家排名前十名有哪些品种，以及动物疫苗有哪些大厂家对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猪用高品质疫苗那个公司最..</p>
+                <h4><a href="/free-nodes/2025-4-1-free-v2ray.htm">4月1日更新18.2M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了美国、日本、加拿大、欧洲、香港、新加坡、韩国等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -357,8 +357,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-98955.htm">pytorch 自动构建任意层的深度神经网络(DNN)</a></h4>
-                <p>动手撸神经网络的代码，是大家常常遇到的问题。在设计自己的网络时，需要考虑网络大小，隐藏层层数，激活函数和参数初始化方法。最笨拙的方法就是固定下来，发生变化就要手动调整一次。这里介绍一种可以自动生生网络</p>
+                <h4><a href="/news/article-104331.htm">广州宠物领养平台有哪些地方可以领养（广州有没有宠物领养机构）</a></h4>
+                <p>摘要：       今天给各位分享广州宠物领养平台有哪些地方可以领养的知识，其中也会对广州有没有宠物领养机构进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、哪.</p>
             </div>
         </div>
     </div>
@@ -367,8 +367,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-14-free-clash-subscribe.htm">4月14日更新20.9M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、欧洲、新加坡、美国、加拿大、日本、韩国等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-92323.htm">动物疫苗知识大全图片（动物疫苗的了解）</a></h4>
+                <p>摘要：       今天给各位分享动物疫苗知识大全图片的知识，其中也会对动物疫苗的了解进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗狗打的预防针,国产的跟.</p>
             </div>
         </div>
     </div>
@@ -377,8 +377,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-96821.htm">C++ 类成员指针</a></h4>
-                <p>C++的类成员指针是一种奇葩的指针。 假设现在我们要表示一个三维的点，现在有两种定义方式： struct point1{ 	int x, y, z; };  struct point2{ 	int c</p>
+                <h4><a href="/news/article-98280.htm">C语言数据结构、十字链表的分析及实现</a></h4>
+                <p>目录  前言 一、什么是十字链表 二、认识十字链表 1.十字链表的组成 2.顶点和弧的连接 三、代码逻辑实现 1.出度 &nbsp;2.入度 总结    &nbsp; 无论是什么程序都要和数据打交道，</p>
             </div>
         </div>
     </div>
@@ -387,8 +387,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-87888.htm">成都宠物领养中心官网（成都宠物领养中心在哪）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈成都宠物领养中心官网，以及成都宠物领养中心在哪对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、启明小动物保护中心请问你们中心的具体地址..</p>
+                <h4><a href="/free-nodes/2025-5-6-free-v2ray-subscribe.htm">5月6日更新19.3M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了欧洲、美国、加拿大、日本、香港、韩国、新加坡等地区,最高速度可达19.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -399,7 +399,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
                                 <h4><span class="badge" style="float: right;">82</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                             </div>
         </div>
