--- a/disclaimer.htm
+++ b/disclaimer.htm
@@ -143,8 +143,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-87163.htm">Java ArrayList集合(Java动态数组)</a></h4>
-                <p>Java ArrayList集合（Java动态数组）  一、ArrayList集合的概述和基本使用   1.概述 2.基本使用   二、ArrayList集合的详细介绍   1.定义一个ArrayLi</p>
+                <h4><a href="/news/article-101153.htm">哥本哈根减肥餐（哥本哈根减肥餐单）</a></h4>
+                <p>本文目录       哥本哈根食谱原版？  第一天   早餐：全麦面包1片、生姜红茶1杯、苹果1个     午餐：玉米200g、水煮蔬菜1份  晚餐：鸡肉200g、脱脂牛奶150g、水果1份    第</p>
             </div>
         </div>
     </div>
@@ -153,8 +153,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-5-1-free-clash.htm">5月1日更新18.2M/S，2025年最新高速Clash/V2ray/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、美国、加拿大、欧洲、香港、日本、新加坡等地区,最高速度可达18.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/free-nodes/2025-4-28-node-share-links.htm">4月28日更新20.2M/S，2025年最新高速Shadowrocket/V2ray/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、新加坡、欧洲、美国、韩国、日本、加拿大等地区,最高速度可达20.2 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -163,8 +163,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-108473.htm">深圳宠物医院加盟连锁（宠物医院 深圳）</a></h4>
-                <p>摘要：       今天给各位分享深圳宠物医院加盟连锁的知识，其中也会对宠物医院 深圳进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、打听下珍斗宠物社区服务中.</p>
+                <h4><a href="/news/article-111017.htm">猫咪注射疫苗要多少钱（猫***疫苗多少钱）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈猫咪注射疫苗要多少钱，以及猫打针疫苗多少钱对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫打疫苗多少钱?2、...        本篇文</p>
             </div>
         </div>
     </div>
@@ -173,8 +173,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-102704.htm">宠物猫疫苗要多少钱一次（宠物猫疫苗多少钱打一次）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈宠物猫疫苗要多少钱一次，以及宠物猫疫苗多少钱打一次对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、猫咪打疫苗多少钱?2、...      </p>
+                <h4><a href="/news/article-91573.htm">成都动物疫苗接种点 成都动物疫苗接种点查询</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于成都动物疫苗接种点的问题，于是小编就整理了3个相关介绍成都动物疫苗接种点的解答，让我们一起看看吧。成都哪有给宠物办理检疫证的地方</p>
             </div>
         </div>
     </div>
@@ -183,8 +183,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-87887.htm">开宠物店狗粮怎么进货呢（开宠物店狗粮怎么进货呢视频）</a></h4>
-                <p>摘要：       今天给各位分享开宠物店狗粮怎么进货呢的知识，其中也会对开宠物店狗粮怎么进货呢视频进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗粮哪里买.</p>
+                <h4><a href="/free-nodes/2025-4-26-clash-node-daily-updates.htm">4月26日更新21.8M/S，2025年最新高速SSR/Shadowrocket/Clash/V2ray订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、加拿大、美国、新加坡、香港、欧洲、日本等地区,最高速度可达21.8 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -193,8 +193,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-14-free-clash-subscribe.htm">4月14日更新20.9M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了香港、欧洲、新加坡、美国、加拿大、日本、韩国等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-98280.htm">C语言数据结构、十字链表的分析及实现</a></h4>
+                <p>目录  前言 一、什么是十字链表 二、认识十字链表 1.十字链表的组成 2.顶点和弧的连接 三、代码逻辑实现 1.出度 &nbsp;2.入度 总结    &nbsp; 无论是什么程序都要和数据打交道，</p>
             </div>
         </div>
     </div>
@@ -203,8 +203,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-104332.htm">动物疫苗原材料供应商（动物疫苗厂家）</a></h4>
-                <p>摘要：       今天给各位分享动物疫苗原材料供应商的知识，其中也会对动物疫苗厂家进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、全球兽药销售额排行榜(中国.</p>
+                <h4><a href="/news/article-109328.htm">QT学习-08-Qt连接Sqllite数据库</a></h4>
+                <p>QT连接sqllite数据库  1.SQLlite简述： SQLite是一款开源轻量级的数据库软件，不需要server，可以集成在其他软件中，非常适合嵌入式系统。Qt5以上版本可以直接使用SQLite</p>
             </div>
         </div>
     </div>
@@ -213,8 +213,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-5-2-clash-node-daily-updates.htm">5月2日更新21.3M/S，2025年最新高速V2ray/Clash/SSR/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了韩国、新加坡、香港、欧洲、日本、加拿大、美国等地区,最高速度可达21.3 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-101903.htm">宠物粮食代加工骗局案例 宠物粮食代加工骗局案例分析</a></h4>
+                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于宠物粮食代加工骗局案例的问题，于是小编就整理了4个相关介绍宠物粮食代加工骗局案例的解答，让我们一起看看吧。文明重启加工宠物粮食怎</p>
             </div>
         </div>
     </div>
@@ -223,8 +223,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-94561.htm">动态指针时钟：利用pyqt5制作指针钟表显示实时时间</a></h4>
-                <p>【阅读全文】 文末附完整源代码实现过程... 想实现这样一个功能，然后pyqt5中又没有现成的组件可以使用，于是就想着只能通过绘图的方式来实现。说到绘图的话，turtle框架无疑是最常见的选择，但其实</p>
+                <h4><a href="/news/article-100538.htm">linux安装离线docker包教程,Centos7离线安装Docker</a></h4>
+                <p>工作原因需要在客户现场离线安装docker，网上看了很多，官方文档也查了一下，总结如下： (已在客户现场成功安装，Centos7，其他linux版本没试过，感觉应该问题不大) 1. 下载离线安装包 提</p>
             </div>
         </div>
     </div>
@@ -233,8 +233,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-85729.htm">长沙宠物领养贴吧 长沙宠物领养贴吧论坛</a></h4>
-                <p>摘要：       大家好，今天小编关注到一个比较有意思的话题，就是关于长沙宠物领养贴吧的问题，于是小编就整理了4个相关介绍长沙宠物领养贴吧的解答，让我们一起看看吧。请问长沙有没有收留藏獒的地方？长沙</p>
+                <h4><a href="/free-nodes/2025-4-30-free-ssr-subscribe.htm">4月30日更新22.4M/S，2025年最新高速V2ray/SSR/Clash/Shadowrocket订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了加拿大、新加坡、欧洲、日本、香港、美国、韩国等地区,最高速度可达22.4 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -245,7 +245,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
                                 <h4><span class="badge" style="float: right;">82</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                             </div>
         </div>
