--- a/about-us.htm
+++ b/about-us.htm
@@ -129,8 +129,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-6-shadowrocket-node.htm">4月6日更新20M/S，2025年最新高速Shadowrocket/SSR/Clash/V2ray订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了加拿大、日本、欧洲、香港、美国、新加坡、韩国等地区,最高速度可达20 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-86453.htm">哪里可以免费领养猫咪（哪里可以免费领养猫咪的猫）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈哪里可以免费领养猫咪，以及哪里可以免费领养猫咪的猫对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、哪里可以领养猫?2、...       </p>
             </div>
         </div>
     </div>
@@ -139,8 +139,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-90081.htm">请多多无货源店怎么开（拼多多无货源店怎么开）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈请多多无货源店怎么开，以及拼多多无货源店怎么开对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、拼多多怎么做无货源店铺...        </p>
+                <h4><a href="/news/article-101153.htm">哥本哈根减肥餐（哥本哈根减肥餐单）</a></h4>
+                <p>本文目录       哥本哈根食谱原版？  第一天   早餐：全麦面包1片、生姜红茶1杯、苹果1个     午餐：玉米200g、水煮蔬菜1份  晚餐：鸡肉200g、脱脂牛奶150g、水果1份    第</p>
             </div>
         </div>
     </div>
@@ -149,8 +149,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/free-nodes/2025-4-20-free-v2ray-subscribe.htm">4月20日更新22.1M/S，2025年最新高速SSR/Clash/V2ray/Shadowrocket订阅链接免费节点地址分享</a></h4>
-                <p>这一次的节点更新覆盖了美国、欧洲、加拿大、韩国、日本、新加坡、香港等地区,最高速度可达22.1 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
+                <h4><a href="/news/article-96821.htm">C++ 类成员指针</a></h4>
+                <p>C++的类成员指针是一种奇葩的指针。 假设现在我们要表示一个三维的点，现在有两种定义方式： struct point1{ 	int x, y, z; };  struct point2{ 	int c</p>
             </div>
         </div>
     </div>
@@ -159,8 +159,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-92322.htm">关于Mina中IoBuffer与Java NIO中ByteBufferde的使用</a></h4>
-                <p>项目中大量的使用&nbsp;NIO&nbsp;和&nbsp;Mina，虽然之前一直对这部分比较关注，但是还没有好好的总结一下这方面的内容，本节内容介绍一下NIO&nbsp;里最基本的一个类&nbsp;</p>
+                <h4><a href="/news/article-107644.htm">狗狗舔人会传染寄生虫吗（小狗驱虫几天排干净虫）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈狗狗舔人会传染寄生虫吗，以及小狗驱虫几天排干净虫对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、宠物狗用舌头舔人的身上,人的身上会不会..</p>
             </div>
         </div>
     </div>
@@ -169,8 +169,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-86457.htm">动物防疫计划书怎么写（动物防疫计划的编制）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈动物防疫计划书怎么写，以及动物防疫计划的编制对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、动物防疫工作个人总结报告...        </p>
+                <h4><a href="/news/article-91574.htm">有人死于被猫抓伤吗（有人死于被猫抓伤吗）</a></h4>
+                <p>摘要：       本篇文章给大家谈谈有人死于被猫抓伤吗，以及有人死于被猫抓伤吗对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、真的有被猫抓伤死的人吗2、...        </p>
             </div>
         </div>
     </div>
@@ -179,8 +179,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-108479.htm">动物接种的途径有哪些分别适用于何种病毒（动物接种的优点和缺点）</a></h4>
-                <p>摘要：       今天给各位分享动物接种的途径有哪些分别适用于何种病毒的知识，其中也会对动物接种的优点和缺点进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、.</p>
+                <h4><a href="/free-nodes/2025-4-14-free-clash-subscribe.htm">4月14日更新20.9M/S，2025年最新高速V2ray/Shadowrocket/SSR/Clash订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了香港、欧洲、新加坡、美国、加拿大、日本、韩国等地区,最高速度可达20.9 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -189,8 +189,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-98955.htm">pytorch 自动构建任意层的深度神经网络(DNN)</a></h4>
-                <p>动手撸神经网络的代码，是大家常常遇到的问题。在设计自己的网络时，需要考虑网络大小，隐藏层层数，激活函数和参数初始化方法。最笨拙的方法就是固定下来，发生变化就要手动调整一次。这里介绍一种可以自动生生网络</p>
+                <h4><a href="/free-nodes/2025-4-19-clash-v2ray-ss-ssr.htm">4月19日更新23M/S，2025年最新高速V2ray/Clash/Shadowrocket/SSR订阅链接免费节点地址分享</a></h4>
+                <p>这一次的节点更新覆盖了韩国、日本、香港、欧洲、新加坡、美国、加拿大等地区,最高速度可达23 M/S。只需复制下方的Clash/v2ray订阅链接,在客户端添加后即可正常使用。</p>
             </div>
         </div>
     </div>
@@ -199,8 +199,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-106801.htm">动物疫苗分几种类别（动物疫苗分几种类别的）</a></h4>
-                <p>摘要：       本篇文章给大家谈谈动物疫苗分几种类别，以及动物疫苗分几种类别的对应的知识点，希望对各位有所帮助，不要忘了收藏本站喔。本文目录一览：1、狗狗疫苗有几种?2、...        本篇</p>
+                <h4><a href="/news/article-109331.htm">不能养什么狗狗（四种不能养的狗）</a></h4>
+                <p>摘要：       今天给各位分享不能养什么狗狗的知识，其中也会对四种不能养的狗进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、世界上有很多不适合养殖的危险的.</p>
             </div>
         </div>
     </div>
@@ -209,8 +209,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-105977.htm">weak_ptr介绍</a></h4>
-                <p>本文转载于http://c.biancheng.net/view/7918.html   在C++98/03的基础上，C++11新标准引入了shared_ptr、unique_ptr以及weak_pt</p>
+                <h4><a href="/news/article-101158.htm">新加入漫威的演员（越早知道越好）</a></h4>
+                <p>对于漫威电影宇宙来说，每年新加入的各大电影节的影帝、影后不算少，即便是奥斯卡这类量级的奖项咖位，目前漫威也是已经“收集”2位数的奥斯卡最佳男女主人数了。     与此同时，漫威还在新项目中不断融入一些</p>
             </div>
         </div>
     </div>
@@ -219,8 +219,8 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                <h4><a href="/news/article-98281.htm">动物打疫苗前后要注意什么事项呢（动物接种疫苗前的准备）</a></h4>
-                <p>摘要：       今天给各位分享动物打疫苗前后要注意什么事项呢的知识，其中也会对动物接种疫苗前的准备进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、狗狗打疫.</p>
+                <h4><a href="/news/article-100539.htm">比熊犬专用狗粮推荐（比熊犬专用狗粮推荐一下）</a></h4>
+                <p>摘要：       今天给各位分享比熊犬专用狗粮推荐的知识，其中也会对比熊犬专用狗粮推荐一下进行解释，如果能碰巧解决你现在面临的问题，别忘了关注本站，现在开始吧！本文目录一览：1、比熊吃什么狗粮比较.</p>
             </div>
         </div>
     </div>
@@ -231,7 +231,7 @@
     <div class="col-lg-12 item">
         <div class="card">
             <div class="box-wrap">
-                                <h4><span class="badge" style="float: right;">9</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
+                                <h4><span class="badge" style="float: right;">16</span> <a href="/date/2025-05/" title="2025-05 归档">2025-05</a></h4>
                                 <h4><span class="badge" style="float: right;">82</span> <a href="/date/2025-04/" title="2025-04 归档">2025-04</a></h4>
                             </div>
         </div>
